# smallest_hello_world

./: Cargo.toml  README.md  build.rs  cargo-release-strip.sh
.github/workflows/: rust.yml
tests/: output_test.rs
